Fix card layout

--- a/views/classrooms.ejs
+++ b/views/classrooms.ejs
@@ -26,7 +26,7 @@
         </form>
         <!--take attendance of the class, directs to the take attendace page-->
         <form
-          class="row mb-3 align-items-center"
+          class="row mt-3 mb-3 align-items-center"
           method="GET"
           action="/classrooms/take-attendance/:<%=user.userId%>/:<%=user.classes[i].classCode%>"
         >
