--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,5 @@
 <%- include('partials/header'); -%>
-
+</nav>
 <form action="/" , method="POST" class="login">
   <!--Post error msgs like invalid username/password if any-->
   <% if(error.length != 0){ %>
