--- a/views/attendancePage.ejs
+++ b/views/attendancePage.ejs
@@ -1,4 +1,13 @@
 <%- include('partials/header'); -%>
+<!--log out button-->
+<form class="form-inline" action = "/logout" method = "POST">
+          <input class="form-control mr-sm-2" type="hidden" />
+          <button class="btn btn-primary my-2 my-sm-0" name = "userId" type="submit" value = "<%=teacherId%>">
+            Log Out
+          </button>
+        </form>
+      </div>
+    </nav>
 <!--display class name, title-list of students and total classes held form the subject-->
 <p class="h2 text-center mt-3"><%=class1.name%></p>
 <p class="h3 text-center mt-3">List of students</p>
