--- a/views/classPage.ejs
+++ b/views/classPage.ejs
@@ -1,4 +1,13 @@
 <%- include('partials/header'); -%>
+<!--log out button-->
+<form class="form-inline" action = "/logout" method = "POST">
+          <input class="form-control mr-sm-2" type="hidden" />
+          <button class="btn btn-primary my-2 my-sm-0" name = "userId" type="submit" value = "<%=userId%>">
+            Log Out
+          </button>
+        </form>
+      </div>
+    </nav>
 <!--display class name-->
 <p class="h2 text-center mt-3"><%=class1.name%></p>
 <!--display the title list of students-->
