--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,5 +1,5 @@
 <!--not active currently-->
-
+</nav>
 <%- include('partials/header'); -%>
 
 <form class="row g-3 register" action="/register" method="POST">
