Fix logout back issue

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,4 @@
-<%- include('partials/header'); -%>
-</nav>
+<%- include('partials/home_header'); -%>
 <form action="/" , method="POST" class="login">
   <!--Post error msgs like invalid username/password if any-->
   <% if(error.length != 0){ %>
