--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,3 +29,7 @@
         <span class="navbar-brand mb-0" style="color: white; font-size: 1.5rem"
           >Attendance Marker</span
         >
+      </div>
+    </nav>
+  </body>
+</html>
